# transformer2

./: .gitignore  README.md  app.py  download.sh  graph.py  graph_stats.py  hyper.py  interact.py  print_sayings.py  requirements.txt  transformer2.py
data-tools/: .gitignore  Cargo.toml
data-tools/src/: bpe.rs  little_endian.rs  main.rs  parallel_xml.rs  priority_map.rs  process_bz2.rs  process_wikitext.rs  process_xml.rs  progress_iter.rs  progress_reader.rs  ref_iterator.rs  rejoin_numbered_articles.rs  split_tokenized_articles.rs  split_words.rs  split_words2.rs  tokenize.rs  train_test_split.rs  word_counter.rs
static/: index.html
