[package]
name = "data-tools"
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = "0.22.1"
byteorder = "1.5.0"
bzip2 = "0.4.4"
clap = { version = "4.5.8", features = ["derive"] }
indicatif = "0.17.8"
nom = "7.1.3"
quick-xml = "0.35.0"
rand = "0.8.5"
rayon = "1.10.0"
rustc-hash = "2.0.0"
scoped-tls = "1.0.1"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
url-escape = "0.1.1"
